--- a/Stocks/Stocks.iOS/Info.plist
+++ b/Stocks/Stocks.iOS/Info.plist
@@ -2,10 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>CFBundleDisplayName</key>
-	<string>$saferootprojectname$</string>
 	<key>CFBundleIdentifier</key>
-	<string>com..$saferootprojectname$</string>
+	<string>com.Stocks</string>
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
@@ -64,5 +62,9 @@
 	</array>
 	<key>UIPrerenderedIcon</key>
 	<true/>
+	<key>UILaunchStoryboardName</key>
+	<string>LaunchScreen</string>
+	<key>CFBundleDisplayName</key>
+	<string>Stocks</string>
 </dict>
 </plist>
